# margin-modeler

./: .gitignore  ALPHA_RELEASE_NOTES.md  CREDITS.md  LICENSE.txt  LICENSE_DECISION.md  PRIVACY.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  THIRD_PARTY_NOTICES.md  WINDOWS_SIGNING.md  index.html  package-lock.json  package.json  release.yml
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  RELEASE-CHECKLIST.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/utils/: dates.ts  resourceCalculations.ts
src/validation/: workspaceValidation.ts
