[package]
name = "margin-modeler"
version = "0.2.0-alpha.1"
description = "Desktop project scenario, resource, and margin modeling application"
authors = ["Omar AtaaAllah"]
edition = "2021"
publish = false
license-file = "../LICENSE.txt"
repository = "https://github.com/OmarAtaa00/margin-modeler"
homepage = "https://github.com/OmarAtaa00/margin-modeler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "margin_modeler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"

